# smart-tender-ai

./: .env.template  .gitignore  README.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: budget.py  rfp.py  scoring.py
backend/app/services/: openai_budget_estimator.py  openai_rfp_generator.py  vendor_scorer.py
docker/: docker-compose.yml
frontend/: Dockerfile  README.md  streamlit_app.py
